# conlang

./: Cargo.toml  book.toml
doc/: SUMMARY.md  custom.css  intro.md
doc/lang/: frequencies.md  phonemes.md
src/: gen.rs  lib.rs  main.rs  phone.rs
