[package]
name = "conlang"
version = "0.1.0"
edition = "2021"
authors = ["Travis Gockel <travis@gockelhut.com>"]
license = "Apache-2.0"
keywords = ["conlang"]
categories = ["command-line-utilities", "text-processing"]
description = "Construct languages from phonetics, to orthography, to grammar, to lexicon, to completion."

[dependencies]
anyhow = "^1.0.71"
aws-config = "^0.55.3"
aws-sdk-polly = "^0.28.0"
bytes = "1.4.0"
clap = { version = "^4.3.1", features = ["derive"] }
itertools = "^0.11.0"
rand = "^0.8.5"
smallvec = "^1.10.0"
soloud = "^1.0.2"
thiserror = "^1.0.43"
tokio = { version = "^1.28.2", features = ["rt-multi-thread", "macros", "fs", "time"] }

[lib]

[[bin]]
name = "conlang"

# Compile dependencies with optimization
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
